src/objects/User_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>View</label>
        <referenceTo>View__c</referenceTo>
        <relationshipLabel>User Settings</relationshipLabel>
        <relationshipName>User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Widget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Widget</label>
        <referenceTo>Widget__c</referenceTo>
        <relationshipLabel>User Settings</relationshipLabel>
        <relationshipName>User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Settings</label>
    <nameField>
        <displayFormat>US-{00000}</displayFormat>
        <label>User Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>